updated for settings used with Pink (G1, etc.)